--- a/flexbox.html
+++ b/flexbox.html
@@ -37,7 +37,7 @@
       </section>
 
       <section id="trofeos" class="seccion-trofeos contenedor">
-        <h2>Un Palmarés Inigualable</h2>
+        <h2>Un Palmarés Inalcanzable</h2>
         <div class="lista-items-flex">
           <div class="cada-trofeo">
             <h4>Champions League</h4>
